tests/data/parseerror/invalid-file-6.php
<?php

namespace invalid;

use foo as bar;
use moo as bar;
